--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@mdi/js": "^7.2.96",
     "@mdi/react": "^1.6.1",
+    "@react-native-community/datetimepicker": "^7.5.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
@@ -45,6 +46,7 @@
     "react-native-reanimated": "^2.14.4",
     "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "^4.6.3",
+    "react-native-wheel-datepicker": "^2.2.3",
     "react-router-dom": "^6.13.0",
     "react-search-box": "^3.0.0",
     "styled-components": "^6.0.2"
