Aggiunta pulsanti per porzioni personalizzabili schermata ricette
Co-authored-by: Cesare Covi <BiscoSwag@users.noreply.github.com>
Co-authored-by: Simone D'Antonio <simoodantonio@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "[javascript]": {
-      "editor.defaultFormatter": "vscode.typescript-language-features"
+      "editor.defaultFormatter": "ms-vsliveshare.vsliveshare"
     },
     "[json]": {
       "editor.defaultFormatter": "vscode.json-language-features"
