--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-native-reanimated": "^2.14.4",
     "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "4.5.0",
+    "react-native-ui-datepicker": "^1.0.3",
     "react-router-dom": "^6.13.0",
     "react-search-box": "^3.0.0",
     "styled-components": "^6.0.2"
