--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@freakycoder/react-native-single-select": "^1.0.0",
     "@mdi/js": "^7.2.96",
     "@mdi/react": "^1.6.1",
-    "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
@@ -25,13 +25,13 @@
     "body-parser": "^1.20.2",
     "crypto-random-string": "^5.0.0",
     "dimensions": "^0.1.0",
-    "expo": "~48.0.15",
-    "expo-crypto": "^12.2.2",
-    "expo-linear-gradient": "~12.1.2",
-    "expo-sqlite": "^11.1.1",
-    "expo-status-bar": "~1.4.4",
+    "expo": "^49.0.0",
+    "expo-crypto": "~12.4.1",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-sqlite": "~11.3.3",
+    "expo-status-bar": "~1.6.0",
     "express": "^4.18.2",
-    "lottie-react-native": "5.1.4",
+    "lottie-react-native": "5.1.6",
     "mysql": "^2.18.1",
     "random-js": "^2.1.0",
     "randombytes": "^2.1.0",
@@ -39,19 +39,19 @@
     "react": "18.2.0",
     "react-animate": "^3.0.0",
     "react-freeze": "^1.0.3",
-    "react-native": "^0.71.8",
+    "react-native": "0.72.10",
     "react-native-blur": "^3.2.2",
     "react-native-crypto-js": "^1.0.0",
     "react-native-element-dropdown": "^2.10.0",
     "react-native-email": "^2.1.0",
-    "react-native-gesture-handler": "~2.9.0",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-image-cache-hoc": "^2.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.7.3",
     "react-native-randombytes": "^3.6.1",
-    "react-native-reanimated": "^2.14.4",
+    "react-native-reanimated": "~3.3.0",
     "react-native-redash": "^18.1.0",
-    "react-native-safe-area-context": "4.5.0",
+    "react-native-safe-area-context": "4.6.3",
     "react-router-dom": "^6.13.0",
     "react-search-box": "^3.0.0",
     "styled-components": "^6.0.2"
